--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "del": "^1.2.0",
     "express": "^4.13.2",
     "express-handlebars": "^2.0.1",
+    "facebook-node-sdk": "^0.2.0",
     "gulp-include": "^2.0.2",
     "method-override": "^2.3.0",
     "morgan": "^1.5.0",
