--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "start": "node --harmony app.js"
+    "start": "node --harmony --use-strict app.js"
   },
   "keywords": [],
   "private": true,
@@ -14,17 +14,21 @@
   "dependencies": {
     "body-parser": "^1.9.3",
     "classnames": "^2.1.3",
+    "co": "^4.6.0",
     "compression": "^1.2.1",
     "debug": "^2.1.0",
     "del": "^1.2.0",
     "express": "^4.13.2",
     "express-handlebars": "^2.0.1",
+    "express-session": "^1.11.3",
     "facebook-node-sdk": "^0.2.0",
     "gulp-include": "^2.0.2",
     "method-override": "^2.3.0",
     "morgan": "^1.5.0",
     "node-jsx": "^0.13.3",
     "node.extend": "^1.1.5",
+    "norm-sql": "^1.2.1",
+    "pg": "^4.4.2",
     "react": "^0.13.3",
     "sax": "^0.6.1",
     "serve-favicon": "^2.3.0",
